2.31
React to Strawberry perl $. strangeness [RT #58528]

2.29
Add .answer to .gitignore
Update t/madness for perl-5.6
Syntax fix print() for perl-5.6
Correct ${^WARNING_BITS} in t/madness.t for perl-5.8.7 and earlier

2.28
Strip illegal regexp modifiers [RT #65355]
Update file permissions

2.27
Test for new regexp /u flag [RT #65339]
Import less private functions
Removed obsolete svn version info

2.26
Keep a glob reference open while inspecting through it with B. [RT #65272]

2.25 (2011-01-24)
Oops, add ppport.h to the packaged distribution

2.24 (2011-01-23)
Fix weakref breakage from perl-5648c0a. [RT #62605]
Add ppport.h
Add .gitignore

2.23 (2011-01-18)
Fix DumpLex for bug #44621

2.22 (2010-07-11)

Build.PL fixed to accept DDS and NODDS again

2.21 (2010-06-19)

Resynchronize internal VERSION declarations

2.20

Skipped version 2.20 because version numbers don't play nice when they
end in zeros.

2.19 (2010-06-19)

Tweak t/madness.t to deal with how perl-5.8.[0-8] deparses the pragma
`use warnings' differently.

2.18 (2010-06-12)

Continue to refine t/lexicals.t response to Perl commit
"e02c0f79a8059eaf4981f798cc21d7dc3c8b916e shift; optimization". The
change happened after 5.13.0 and is released in 5.13.1.

2.17 (2010-06-11)

Declare ExtUtils::CBuilder as a build_requries dependency

2.16 (2010-06-11)

Manually add VERSION to Data::Dump::Streamer::Deparser to make CPAN
indexer happy.

2.15 (2010-06-11)

Perl commit "538f5756c002f0583190831238bbf6bd54855cdc shift;
optimization" changed B::Deparse

Switch from ExtUtils::MakeMaker to Module::Build for
configure_requires support

2.14 (2010-06-08)

Our Makefile.PL must abort if we're going to need to build B::Utils
but we don't have ExtUtils::Depends because it doesn't work to let the
build chain do this dependency resolution. Perhaps there is a version
that this all "just works" in?

t/dump.t required some styling state changes but was skipping them
when some modules weren't installed.

2.13 (2010-04-05)
